[gd_scene load_steps=13 format=3 uid="uid://dub1aeswruwgc"]

[ext_resource type="Script" path="res://scripts/managers/phy_sim_module.gd" id="1_wmmsw"]
[ext_resource type="PackedScene" uid="uid://doxg2ai64lgio" path="res://scenes/ui/toolbox_h.tscn" id="2_88lim"]
[ext_resource type="PackedScene" uid="uid://c6b1wul07w86q" path="res://scenes/objects/misc/test_grounds.tscn" id="3_n17gb"]
[ext_resource type="PackedScene" uid="uid://dioo4irawvpx" path="res://scenes/ui/toolbox_v.tscn" id="3_r35uw"]
[ext_resource type="Texture2D" uid="uid://di82pwaof7t5f" path="res://assets/icons/ui/toolbox_actions/zoom_in.svg" id="4_ta1y8"]
[ext_resource type="Texture2D" uid="uid://dqs0cs4t1fbtw" path="res://assets/icons/ui/toolbox_actions/focus.svg" id="5_ld1v3"]
[ext_resource type="Texture2D" uid="uid://dmxo4hb8p0wdb" path="res://assets/icons/ui/toolbox_actions/zoom_out.svg" id="6_yarqk"]
[ext_resource type="Script" path="res://scripts/managers/CameraController.gd" id="8_k2lfj"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4uigt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tb1n1"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0m5xv"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fudkf"]

[node name="PhySim" type="Control" groups=["Bodies", "Toolboxes"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wmmsw")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(2500, 1500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -650.0
offset_top = -450.0
offset_right = 698.0
offset_bottom = 402.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.933333, 0.933333, 0.933333, 1)

[node name="UIelements" type="CanvasLayer" parent="."]

[node name="SaveBtn" type="Button" parent="UIelements"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -73.0
offset_bottom = -37.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="QuitBtn" type="Button" parent="UIelements"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="ShowToolsBtn" type="Button" parent="UIelements"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Hide tools"

[node name="ShowStatsBtn" type="Button" parent="UIelements"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -114.0
offset_top = 38.0
offset_bottom = 74.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Show Stats"

[node name="Tools" type="Control" parent="UIelements"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ToolboxObjects" parent="UIelements/Tools" instance=ExtResource("2_88lim")]
layout_mode = 1
offset_bottom = 50.0
mouse_filter = 2

[node name="ToolboxActions" parent="UIelements/Tools" instance=ExtResource("3_r35uw")]
layout_mode = 1
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIelements"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
alignment = 1

[node name="ZoomIn" type="Button" parent="UIelements/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("4_ta1y8")
expand_icon = true

[node name="ZoomCenter" type="Button" parent="UIelements/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("5_ld1v3")
expand_icon = true

[node name="ZoomOut" type="Button" parent="UIelements/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("6_yarqk")
expand_icon = true

[node name="StatsView" type="CanvasLayer" parent="."]
visible = false

[node name="ValuesDisplay" type="VBoxContainer" parent="StatsView"]
offset_right = 40.0
offset_bottom = 40.0

[node name="scene_borders" type="Node2D" parent="."]
visible = false

[node name="border_top" type="StaticBody2D" parent="scene_borders"]
position = Vector2(576, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_borders/border_top"]
rotation = 3.14159
scale = Vector2(54, 1)
shape = SubResource("WorldBoundaryShape2D_4uigt")

[node name="border_down" type="StaticBody2D" parent="scene_borders"]
position = Vector2(576, 648)

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_borders/border_down"]
scale = Vector2(57.5, 1)
shape = SubResource("WorldBoundaryShape2D_tb1n1")

[node name="border_left" type="StaticBody2D" parent="scene_borders"]
position = Vector2(0, 324)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_borders/border_left"]
scale = Vector2(29.5, 1)
shape = SubResource("WorldBoundaryShape2D_0m5xv")

[node name="border_right" type="StaticBody2D" parent="scene_borders"]
position = Vector2(1152, 324)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_borders/border_right"]
scale = Vector2(30.5, 1)
shape = SubResource("WorldBoundaryShape2D_fudkf")

[node name="TestGrounds" parent="." instance=ExtResource("3_n17gb")]
position = Vector2(0, 46)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("8_k2lfj")

[connection signal="button_down" from="UIelements/SaveBtn" to="." method="_on_save_button_button_down"]
[connection signal="button_down" from="UIelements/QuitBtn" to="." method="_on_quit_btn_button_down"]
[connection signal="button_down" from="UIelements/ShowToolsBtn" to="." method="_on_show_tools_btn_button_down"]
[connection signal="button_down" from="UIelements/ShowStatsBtn" to="." method="_on_show_stats_btn_button_down"]
